--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ name = "server"
 path = "src/bin_server.rs"
 
 [dependencies]
+# Network dependencies
 bytes = "0.4"
 futures = "0.1"
 tokio-io = "0.1"
@@ -23,4 +24,9 @@ tokio-core = "0.1"
 tokio-proto = "0.1"
 tokio-service = "0.1"
 
+# Graphics dependencies
+piston = "0.33.0"
 piston_window = "0.61.0"
+piston2d-graphics = "0.21.1"
+pistoncore-glutin_window = "0.39.0"
+piston2d-opengl_graphics = "0.46.0"
