Picked data storage interface. Loose ends in core/handshake/graphics. Fires everywhere!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,6 @@ piston_window = "0.61.0"
 piston2d-graphics = "0.21.1"
 pistoncore-glutin_window = "0.39.0"
 piston2d-opengl_graphics = "0.46.0"
+
+# Database dependencies
+rusqlite = {version = "0.12.0", features = ["bundled"]}
