--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ tokio-proto = "0.1"
 tokio-service = "0.1"
 
 # Graphics dependencies
+conrod = "0.54.0"
 piston = "0.33.0"
 piston_window = "0.61.0"
 piston2d-graphics = "0.21.1"
