--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,13 +24,11 @@ tokio-core = "0.1"
 tokio-proto = "0.1"
 tokio-service = "0.1"
 
-# Graphics dependencies
-conrod = "0.54.0"
-piston = "0.33.0"
-piston_window = "0.61.0"
-piston2d-graphics = "0.21.1"
-pistoncore-glutin_window = "0.39.0"
-piston2d-opengl_graphics = "0.46.0"
-
 # Database dependencies
 rusqlite = {version = "0.12.0", features = ["bundled"]}
+
+# Graphics dependencies
+[dependencies.cursive]
+version = "0.6"
+default-features = false
+features = ["pancurses-backend"]
