--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ tokio-service = "0.1"
 
 # Database dependencies
 rusqlite = {version = "0.12.0", features = ["bundled"]}
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
 
 # Graphics dependencies
 [dependencies.cursive]
